<resources>
    <string name="app_name">Anyone Can Fish</string>
    <string name="little_fish_icon">Little Fish Icon</string>
    <string name="forecast_weather_icon">Weather Icon</string>
    <string name="action_settings">Settings</string>

    <string name="main_btn_fishing_basics">Fishing Basics</string>
    <string name="main_btn_game_fish">Game Fish of North America</string>
    <string name="main_btn_mytrips">Fishing Trips</string>
    <string name="main_btn_mytackle">Tackle Boxes</string>

    <string name="mainmenu_map">Map</string>
    <string name="mainmenu_signout">Sign Out</string>

    <!-- complete sun and moon data for one day -->
    <string name="solunar_api_baseurl">https://api.usno.navy.mil/rstt/oneday</string>
    <string name="solunar_param_date">date</string>
    <string name="solunar_param_coords">coords</string>
    <string name="solunar_param_timezone">tz</string>
    <string name="first_weather_api_baseurl">https://api.weather.gov/points/</string>

    <!-- Firebase Firestore Database Collections-->
    <string name="db_game_fish">game_fish</string>
    <string name="db_basic_info">basic_info</string>
    <string name="db_users">users</string>
    <string name="db_tackle_boxes">TackleBoxes</string>
    <string name="db_trips">Trips</string>
    <string name="db_lures">Lures</string>
    <string name="db_fish_events">FishEvents</string>
    <string name="db_public_fish_events">PublicFishEvents</string>

    <!--content description-->
    <string name="content_outlook">Fishing Outlook</string>
    <string name="content_fish_image">Image of a fish</string>
    <string name="content_lure_image">Image of a type of lure</string>
    <string name="content_log_event_icon">Icon of a leaping fish</string>
    <string name="content_forecast_icon">Representation of Forecast</string>
    <string name="content_tackle_box_image">Image of a tackle box</string>
    <string name="content_basic_info_image">Fishing Equipment</string>
    <string name="calculatron_info">An estimate of whether the fishing is good or bad or iffy</string>

    <string name="title_activity_fishing_basics">The Basics of Fishing</string>
    <string name="title_activity_game_fish">Game Fish of North America</string>
    <string name="title_activity_fishing_trips">Fishing Trips</string>
    <string name="title_activity_tackle_boxes">Tackle Boxes</string>
    <string name="title_activity_lures">Lures</string>
    <string name="title_activity_basic_equipment">Basic Equipment</string>
    <string name="title_activity_how_to_fish_">How To Fish</string>
    <string name="title_activity_maintenance_">Maintenance</string>
    <string name="title_activity_maps">Anyone Can Fish Map</string>

    <string name="basics_whatyouneed">Basic Equipment</string>
    <string name="basics_howtofish">Mentor Someone</string>
    <string name="basics_rulesresources">U.S Fish and Wildlife Service</string>
    <string name="usa_fish_and_wildlife_url">https://www.fws.gov/offices/index.html</string>
    <string name="basics_maintenance">Maintenance</string>

    <string name="lure_hint_name">Name</string>
    <string name="lure_hint_size">Size</string>
    <string name="lure_hint_desc">Description</string>
    <string name="lure_hint_type">Type</string>

    <string name="trip_hint_name">Name</string>
    <string name="trip_hint_desc">Description</string>
    <string name="trip_hint_startDate">Start</string>
    <string name="trip_hint_endDate">End</string>
    <string name="trip_hint_gps">Use GPS?</string>

    <string name="fishevent_hint_species">Species</string>
    <string name="fishevent_hint_released">Released?</string>
    <string name="fishevent_hint_desc">Description</string>
    <string name="fishevent_hint_date">Date</string>

    <string name="large_text_HowToFish">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="large_text_basic_equipment">
        "Using the right tool makes any job easier.\n\n"

        "That having been said, depending on the job, deciding on what the right tool is isn't always obvious."
        "I'll try and categorize a few ways of fishing, with what seems to me to be the minimum gear
        to take with you that will allow you to fish until you want to stop fishing.\n\n"

        "Line \n"
        "Choosing the correct line to use is important. Have an idea of what type of fish you plan on
        trying to catch, and what the typical size range of those fish is. While line material technology
        is constantly being improved on, generally speaking, look for a line weight that barely meets
        or exceeds the size of the fish you will probably be encountering. This will allow for the least
        line visibility - you don't want fish to notice it - and greatest sensitivity. The rod you choose
        also matters when it comes to the size range of the line you should use. Larger weight lines
        tend to reduce the sensitivity, and increase the visibility, among other aspects. Bring a spare
        spool with you.\n\n"

        "Hooks \n"
        "Just like with the thought behind line; bigger is not necessarily better. Once again, it depends
        on the type of fish you are fishing for, but keeping the hook smaller is a good idea for a few
        reasons:\n"
        "- the fish won't be able to see it as well\n"
        "- the fish will actually be able to get hooked\n"
        "- you won't overwhelm the bait you are using\n\n"
        "You also want to pick the right style of hook. Hooks come in many shapes and styles - too many
        for me to cover all of them. In general, the aspects that they are specialized for are:\n"
        "1) what type of bait you are using\n"
        "2) how you plan on fishing with it; i.e. with a bobber, trolling, etc.\n\n"

        "Sinkers \n
        Are you fishing for surface-focused fish? If not, you most definitely need a way to get your
        bait down to the fish you are targeting, and that's where a sinker comes into play. Weigh things
        down.\n
        Depending on if you are using a bobber, "bouncing the bottom", trolling, or trying to keep your
        bait anchored in one place, you will need to look at a different type of sinker.\n\n

        A Rod \n
        When I say 'rod', I mean this in the most basic sense; something for you to hold in order to
        safely apply pressure to the line in order to bring any fish out of the water, and successfully
        into your possession! This could be something as simple as a cane pole, but probably something
        made out of graphite, meant to work with a reel. What you want out of the rod you choose is a
        combination of flexibility, sensitivity, and size that is appropriate for *how* you are going
        to fish, and what type of fish you anticipate catching.\n\n

        A Reel \n
        This is a device that serves safely store the line you are using, in such a way to protect it
        from damage, and allow it to be dynamically lengthened or shortened when trying to catch fish.
        Reels (and rods) can be very expensive, and depending on the type of fishing you are planning
        on doing, may require careful care. Essentially - as is the trend with a number of pieces of
        gear - you want to pick a reel that is the right size and style for how you are trying to fish
        and what you are fishing for.\n\n

        Bait\n
        Depending on what you are trying to catch, there are so many different things you can fish with
        - both live and inanimate - that it's impossible for me to cover this topic completely. What
        you need to use is simply something to put on the other end of the line from you, that you think
        a fish will want to put into its mouth.\n\n

        Pliers and/or Hemostats \n
        - The mouths of fish can be very tough, and once a hook is embedded, they can be difficult to
        remove - especially since most hooks are barbed.\n
        - The fish could have swallowed the hook further down than you can grab, and having a thin tool
        to reach down in a fish mouth can be handy.\n
        - Some fish have sharp teeth and/or strong jaws that you don't want to put your fingers anywhere
        close to.\n\n

        Clippers or a Knife (cutting tool) \n
        Most of the reasons for having a cutting tool at hand have to do with the line. Mainly it's:\n
        - after tying a knot\n
        - if a fish completely swallows the bait\n
        - if you get hopelessly snagged\n
        - if a giant knot forms in the middle of your line\n\n

        Towel\n
        Always remember to bring a towel.
        "
    </string>
    <string name="large_text_Maintenance">
        "Keeping your line in the water.\n\n"

        "Just like with most things in this world, fishing gear will only last as long as it is cared for appropriately."
    </string>
</resources>
