<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar"
    android:layout_margin="@dimen/widget_margin"
    android:background="@color/paper_500"
    tools:layout_width="275dp"
    tools:layout_height="200dp">
    <LinearLayout
        android:id="@+id/widget_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#aaDEDFDE"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <ImageView
            android:id="@+id/widget_img_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/little_fish_icon"
            android:src="@drawable/fish_circle_002"/>
        <ImageView
            android:id="@+id/widget_anyone_can_fish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="horizontal">
        <ListView
            android:id="@+id/widget_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">
        </ListView>
        <ImageButton
            android:id="@+id/imgLogFishEvent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:scaleType="centerInside"
            android:layout_weight="2"
            android:padding="@dimen/widget_header_padding"
            android:src="@drawable/fish_leaping_icon_circle"
            android:elevation="4dp"
            android:contentDescription="@string/content_log_event_icon"
            />
    </LinearLayout>

</LinearLayout>