<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar"
    android:layout_margin="@dimen/widget_margin"
    android:background="@color/paper_500"
    tools:layout_width="275dp"
    tools:layout_height="200dp">
    <LinearLayout
        android:id="@+id/widget_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#aaDEDFDE"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <ImageView
            android:id="@+id/widget_img_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/little_fish_icon"
            android:src="@drawable/fish_circle_002"/>
        <ImageView
            android:id="@+id/widget_anyone_can_fish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="horizontal">
        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_margin="@dimen/widget_thin_margin"
            android:id="@+id/widgetItemContainer"
            >
            <ImageView
                android:id="@+id/widgetForecastIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/hooked"
                android:contentDescription="@string/content_forecast_icon"
                />
            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/scrim"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/widgetOutlookImg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start|bottom"
                    android:contentDescription="@string/content_outlook"
                    />
                <View
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="start|bottom"
                    android:background="@drawable/scrim"
                    />
                <TextView
                    android:id="@+id/widgetOutlookText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:fontFamily="@font/adamina"
                    android:textColor="@color/paper_500"
                    tools:text="GOOD"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/widgetDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:fontFamily="@font/adamina"
                    tools:text="Tomorrow"
                    android:textColor="@color/paper_500"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/widgetWindDir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:fontFamily="@font/adamina"
                    tools:text="NW"
                    android:textColor="@color/paper_500"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/widgetTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:fontFamily="@font/adamina"
                    tools:text="75 F"
                    android:textColor="@color/paper_500"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/widgetWindSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:fontFamily="@font/adamina"
                    tools:text="12 mph"
                    android:textColor="@color/paper_500"
                    android:textSize="12sp" />

            </FrameLayout>

        </FrameLayout>

        <ImageButton
            android:id="@+id/LogFishEvent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/paper_500"
            android:contentDescription="@string/content_log_event_icon"
            android:elevation="4dp"
            android:padding="@dimen/widget_header_padding"
            android:scaleType="centerInside"
            android:src="@drawable/fish_leaping_icon_circle" />
    </LinearLayout>

</LinearLayout>